--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <header style="background-color: lightgray">
         <a style="color: gray" href="https://uk.wikipedia.org/wiki/%D0%A1%D0%BF%D0%B8%D1%81%D0%BE%D0%BA_%D0%BA%D0%BE%D1%82%D1%8F%D1%87%D0%B8%D1%85_%D0%BF%D0%BE%D1%80%D1%96%D0%B4"> Породи Добреньких котиков </a>
     </header>
-        <h1 style="text-align: center; color: green; font-size:45px"> Котячи породи, смішні та гарненьки </h1>
+        <h1 style="text-align: center; color: green; font-size:45px"> Котячи породи </h1>
+        <h1 style="text-align: center; color: green; font-size: 40px"> смішні та гарненьки </h1>
         <a href="#Britan"> Британська Короткошерста </a> 
         <a href="#Bengal"> Бенгальска Кішка </a>
         <a href="#EgeysCat"> Єгейська кішка</a>
@@ -63,7 +64,7 @@
         <td> Бенгальська Кішка </td>
         <td>  Родом з США</td>
         <td> плямиста або мармурова шерсть з блиском ефект "золота", що нагадує леопардову шкуру </td>
-        <td> </td>
+        <td> https://uk.wikipedia.org/wiki/Бенгальська_Кішка </td>
      </tr>
      <tr> 
         <td> Перська Кішка </td>
@@ -76,7 +77,7 @@
 шоколадний,
 ліловий,
         </td>
-        <td> </td>
+        <td>https://uk.wikipedia.org/wiki/Перська_Кішка </td>
 
 
 
@@ -97,5 +98,7 @@
       
     </footer>
 </body>
+
+</html>
 
 </html>
